# ResilientPlotterClass

./: .gitignore  LICENSE  TODO.md  index.html  pyproject.toml  readme.md  todo.md
.github/workflows/: docs.yml
_pages/_functions/: resilientplotterclass.axes.format.html  resilientplotterclass.data_xarray.pcolormesh.html  resilientplotterclass.data_xarray.quiver.html  resilientplotterclass.data_xarray.streamplot.html  resilientplotterclass.data_xugrid.quiver.html  resilientplotterclass.geometries.get_gdf_cartopy.html  resilientplotterclass.rescale.get_rescale_parameters.html  resilientplotterclass.utils.rasterise_uds.html
_pages/_guides/: 02_using_guidelines.html  04_plotting_unstructured_data.html  05_plotting_geometries.html  06_plotting_basemaps.html
_pages/_modules/: resilientplotterclass.axes.html  resilientplotterclass.data_xarray.html  resilientplotterclass.rescale.html  resilientplotterclass.videos.html
build_docs/: build_the_docs.md
build_docs/source/: conf.py  installation.rst
data/: example_guidelines.json
data/temp/: temp_sedero.txt
docs/: .buildinfo  .buildinfo.bak  build_the_docs.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  todo.md  usage_examples.html
docs/.doctrees/: api_reference.doctree  environment.pickle  index.doctree  installation.doctree  resilientplotterclass.doctree  usage_examples.doctree
docs/.doctrees/usage_examples/: 01_getting_started.doctree  (+1 more)
docs/_modules/: index.html
docs/_pages/: api_reference.html  guides.html
docs/_sources/: api_reference.rst.txt  index.rst.txt
docs/documentation/: conf.py  readme.md
docs/guides/: 02_interactive_guide.ipynb  05_plotting_geometries.ipynb
docs/logo/: create_rpc_logo.ipynb  rpc_logo.pptx
docs/source/: conf.py  resilientplotterclass.rst  usage_examples.rst
docs_builder/: conf.py  index.rst  readme.md
docs_builder/_pages/: guides.rst
guides/: 00_installation_guide.rst  01_basic_guide.ipynb  07_utilities.ipynb
notebooks/usage_examples/: 03_draw_map.ipynb  03_plotting_structured_data.ipynb  05_plotting_geometries.ipynb
project/: project_guidelines.json  project_main.py  vrl.py  yunlin.py
src/: colormaps.py  default_guidelines.json  plot_basemaps.py  plot_geometries.py  plot_structured_data.py  plot_unstructured_data.py  resilientplotterclass.py
src/resilientplotterclass/: __init__.py  axes.py  basemaps.py  colormaps.py  data_xarray.py  data_xugrid.py  geometries.py  interactive.py  interactive_old.py  plot.py  plot_basemap.py  plot_geometries.py  plot_structured_data.py  plot_unstructured_data.py  rescale.py  rpc.py  rpclass.py  structured_data.py  unstructured_data.py  utils.py  videos.py
(+548 files in other folders)
