[project]
name = "resilientplotterclass"
version = "1.0"
authors = [{name="Math van Soest"}, {name="Ruben White"}]
description = "A package to create resilient plots for geospatial data"
readme = "readme.md"
requires-python = ">=3.7"
dependencies = [
    'ipykernel',
    'rioxarray',
    'xugrid',
    'geopandas',
    'matplotlib',
    'contextily',
    'cartopy',
    'folium',
    'colorcet',
    'cmocean',
    'opencv-python',
]

[project.optional-dependencies]
docs = [
    'toml',
    'sphinx',
    'sphinx_design',
    'sphinx-copybutton',
    'nbsphinx',
    'pydata-sphinx-theme',
]

[project.urls]
"Homepage" = "https://github.com/Deltares-research/ResilientPlotterClass"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
resilientplotterclass = ["cmaps/*", "guidelines/*"]