[project]
name = "resilientplotterclass"
version = "2025.08.15"
authors = [{ name = "Math van Soest" }, { name = "Ruben White" }]
description = "A Python package to create resilient plots for geospatial data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "cmocean>=4.0.3",
    "colorcet>=3.1.0",
    "colormaps>=0.4.2",
    "contextily>=1.6.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "ipyleaflet>=0.20.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.5",
    "netcdf4>=1.7.2",
    "opencv-python>=4.12.0.88",
    "rioxarray>=0.19.0",
    "xugrid>=0.14.2",
]

[dependency-groups]
dev = [
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "nbsphinx>=0.9.6",
    "pandoc>=2.4",
    "pytest>=8.4.0",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-apidoc>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
